syntax = "proto3";

message FetchRequest {
  bytes identifier = 1;
}

message FetchResponse {
  enum StatusCode {
    OK = 0;
    NOT_FOUND = 1;
    ERROR = 2;
  }

  StatusCode status = 1;
  bytes data = 2;
}
